# semestr1_lab2_2

./: .gitignore  CMakeLists.txt  main.c
